Added block content to index.jade as well as edits to layout.jade

--- a/FreeTime/views/layout.jade
+++ b/FreeTime/views/layout.jade
@@ -1,7 +1,6 @@
 doctype html
 html
   head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/login.css', type='text/css')
   body
     block content
