--- a/FreeTime/views/index.jade
+++ b/FreeTime/views/index.jade
@@ -1,25 +1,25 @@
 extends layout
-
-doctype html
-html
-  head
-    link(href='login.css', rel='stylesheet', type='text/css')
-  #bottom
-    h1
-      span What is freetime?
-    h2
-      span
-        | freetime makes planning
-        br
-        | around your friends' busy
-        br
-        | schedule hassle-free.
-    h3
-      span Start social scheduling today
-    form
-      input.signup-box(type='text', name='signup', required='', placeholder='Your email or phone number')
-    a.myButton(href='#') Sign Up!
-  p(align='center')
-    img(src='http://i.imgur.com/HMklqT3.png', width='475', height='157.49')
+block content
+  doctype html
+  html
+    head
+      link(rel='stylesheet', href='/stylesheets/login.css', type='text/css')
+    #bottom
+      h1
+        span What is freetime?
+      h2
+        span
+          | freetime makes planning
+          br
+          | around your friends' busy
+          br
+          | schedule hassle-free.
+      h3
+        span Start social scheduling today
+      form
+        input.signup-box(type='text', name='signup', required='', placeholder='Your email or phone number')
+      a.myButton(href='#') Sign Up!
+    p(align='center')
+      img(src='http://i.imgur.com/HMklqT3.png', width='475', height='157.49')
 
 
