--- a/FreeTime/public/stylesheets/login.css
+++ b/FreeTime/public/stylesheets/login.css
@@ -1,10 +1,16 @@
 @import url(https://fonts.googleapis.com/css?family=Comfortaa);
+	
+	#top {
+		overflow: hidden;
+		position: fixed;
+		right: 34%;
+	}
 
 	#bottom {
 		position: fixed;
 		left: 0;
 		right: 0;
-		height: 70%;
+		height: 73%;
 		text-align: center;  
 		vertical-align: middle ;
 		font-family: Comfortaa;
@@ -13,6 +19,13 @@
 	#bottom {
 		bottom: 0;
 		background-color: rgb(162, 205, 57);
+	}
+
+	#wrapper {
+		margin-left: auto;
+		margin-right: auto;
+		width: 1000px;
+		overflow: hidden;
 	}
 
 	
@@ -25,63 +38,62 @@
 	   font-family: Comfortaa;		
 	   font-style: normal;		
 	   font-weight: 100;
-	   font-size: 50px
+	   font-size: 60px
 	}
     
     h2 span {
 	    position: absolute;
-	    top: 160px;
+	    top: 180px;
 	    left: 0;
 	    width: 100%;
 	    color: white;
 	    font-family: Comfortaa;
 	    font-style: normal;
 	    font-weight: lighter;
-	    font-size: 25px;
+	    font-size: 35px;
 	}
     
     h3 span {
 	    position: absolute;
-	    top: 300px;
+	    top: 360px;
 	    left: 0;
 	    width: 100%;
 	    color: white;
 	    font-family: Comfortaa;
 	    font-style: normal;
 	    font-weight: 100;
-	    font-size: 34px
+	    font-size: 44px
 	}
    
    .signup-box, .close-icon, .signup {
 	   position: absolute;
-	   left: 390px;
+	   right: 42%;
 	   padding: 3px;
-	   width: 340px;
+	   width: 360px;
 	   height: 30px;
 	   margin: 0 auto;
-	   margin-top: 360px;
+	   margin-top: 460px;
 	   border-radius: 5px;
 	   background: white;
 	   border: 2px;
-	   font-size: 27px;
+	   font-size: 23px;
 	}
    
    .myButton {	
 	   position: absolute;
-	   margin-top: 360px;
-	   right: 300px;
+	   margin-top: 460px;
+	   left: 60%;
 	   height: 5px;
 	   background-color: #57682E;	
 	   -moz-border-radius: 28px;	
 	   -webkit-border-radius: 28px;	
 	   border-radius: 28px;	
-	   border: 1px solid #18ab29;	
 	   display: inline-block;	
 	   cursor: pointer;	
 	   color: #ffffff;	
 	   font-family: Comfortaa;	
 	   font-size: 17px;	
-	   padding: 16px 31px;
+	   padding: 16px 28px;
 	   text-align: center;
 	   line-height: 10px;	
 	   text-decoration: none;	
