--- a/FreeTime/views/index.jade
+++ b/FreeTime/views/index.jade
@@ -1,9 +1,11 @@
 extends layout
+
 block content
-  doctype html
-  html
+doctype html
+html
+  #wrapper
     head
-      link(rel='stylesheet', href='/stylesheets/login.css', type='text/css')
+      link(href='login.css', rel='stylesheet', type='text/css')
     #bottom
       h1
         span What is freetime?
@@ -19,7 +21,8 @@ block content
       form
         input.signup-box(type='text', name='signup', required='', placeholder='Your email or phone number')
       a.myButton(href='#') Sign Up!
-    p(align='center')
-      img(src='http://i.imgur.com/HMklqT3.png', width='475', height='157.49')
-
+    #top
+      p(align='center')
+        img(src='http://i.imgur.com/HMklqT3.png', width='475', height='157.49')
+  html
 
