--- a/FreeTime/views/layout.jade
+++ b/FreeTime/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    link(rel='stylesheet', href='/stylesheets/login.css', type='text/css')
+    title= title
+    link(rel='stylesheet', href='/stylesheets/login.css')
   body
     block content
-
