--- a/FreeTime/views/Home.jade
+++ b/FreeTime/views/Home.jade
@@ -1,25 +1,27 @@
-extends layout
-block content
-  doctype html
-  html
-    head
-      link(rel='stylesheet', href='/stylesheets/login.css', type='text/css')
-    #bottom
-      h1
-        span What is freetime?
-      h2
-        span
-          | freetime makes planning
-          br
-          | around your friends' busy
-          br
-          | schedule hassle-free.
-      h3
-        span Start social scheduling today
+doctype html
+html(ng-app='')
+  head
+    link(href='login.css', rel='stylesheet', type='text/css')
+    script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js')
+    script(src='signup.js')
+  #bottom
+    h1
+      span What is freetime?
+    h2
+      span
+        | freetime makes planning
+        br
+        | around your friends' busy
+        br
+        | schedule hassle-free.
+    h3
+      span Start social scheduling today
+    body(ng-controller='SignUpController')
       form
-        input.signup-box(type='text', name='signup', required='', placeholder='Your email or phone number')
-      a.myButton(href='#') Sign Up!
-    p(align='center')
-      img(src='http://i.imgur.com/HMklqT3.png', width='475', height='157.49')
-
+        input.signup-box(type='text', name='signup', required='', placeholder='Your email or phone number', ng-model='email')
+        button(type='button', ng-controller='SignUpController', ng-click='postRequest()') Sign Up!
+        |   {{post.signup}}
+        |   {{post}}
+  p(align='center')
+    img(src='http://i.imgur.com/HMklqT3.png', width='475', height='157.49')
 
