--- a/FreeTime/views/Partials/Feed.jade
+++ b/FreeTime/views/Partials/Feed.jade
@@ -13,3 +13,6 @@ html
 				input(type='date' ng-model='time.date')
 				br
 				button(ng-click='printTime(time)') Done
+				br
+				br
+				button(ng-click='logout()') Logout
