Add first rendition of posting freetime.

--- a/FreeTime/views/Partials/Feed.jade
+++ b/FreeTime/views/Partials/Feed.jade
@@ -12,7 +12,7 @@ html
 				br
 				input(type='date' ng-model='time.date')
 				br
-				button(ng-click='printTime(time)') Done
+				button(ng-click='postTime(time)') Done
 				br
 				br
 				button(ng-click='logout()') Logout
