Add textfield, submit button.

--- a/views/Home.jade
+++ b/views/Home.jade
@@ -68,6 +68,11 @@ html(lang='en')
             .col-md-8.col-md-offset-2
               h1.brand-heading freetime
               p.intro-text Schedule parties and events around your friends' schedules
+            .col-md-6.col-md-offset-2
+              form
+                input(type="text" placeholder="Email").form-control
+                button(type="submit").btn.btn-default Sign up
+            .col-md-8.col-md-offset-2
               a.btn.btn-circle.page-scroll(href='#about')
                 i.fa.fa-angle-double-down.animated
     // About Section
