--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
         <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
         <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
         <link rel='stylesheet' href='../fullcalendar-3.0.1/fullcalendar.css' />
+        <link rel='stylesheet' href='../style.css'/>
         <script src='../fullcalendar-3.0.1/lib/jquery.min.js'></script>
         <script src='../fullcalendar-3.0.1/lib/moment.min.js'></script>
         <script src='../fullcalendar-3.0.1/fullcalendar.js'></script>
@@ -19,61 +20,6 @@
 
   <div id="calendar"></div>
   <div id="chat"></div>
-  <style>
-      /*div {*/
-          /*height: 100%;*/
-          /*width: 100%;*/
-      /*}*/
-      table{
-          border-collapse: collapse;
-      }
-      td, th{
-          border: 1px solid #999;
-          padding: 0.5rem;
-
-      }
-      th{
-          text-align: center;
-      }
-      td {
-          text-align: left;
-      }
-      #calendar {
-          display: inline-block;
-          vertical-align: top;
-          margin-right: 10px;
-          width: 80%
-      }
-      #chat{
-          display: inline-block;
-          width:15%;
-          height: 90vh;
-          border: 1px solid #999;
-          padding: 0.5rem;
-      }
-      #messageInput{
-          display: inline-block;
-          position: absolute;
-          bottom: 0px;
-          width: 60%;
-          height: 3vh;
-          border: 1px solid #999;
-          margin: 5px auto auto 5px;
-      }
-      #sendMessageButton{
-          display: inline-block;
-          width: 25%;
-          height: 3vh;
-          text-align: center;
-      }
-      
-      .SendBlock{
-          width: 100%;
-          height: 100vh;
-          position: relative;
-      }
-
-  </style>
     <script type="text/babel">
         var CommentBox = React.createClass({
             render: function() {
